--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,16 +1,9 @@
 [package]
-name = "flux-macros"
+name = "example"
 version = "0.1.0"
 edition = "2021"
 publish = false
-
-[lib]
-proc-macro = true
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syn = { version = "1.0.103", features = ["parsing"] }
-quote = "1.0.21"
-proc-macro2 = "1.0.47"
-convert_case = "0.6.0"
+fluxmc = { path = "../fluxmc" }
