--- a/fluxmc/Cargo.toml
+++ b/fluxmc/Cargo.toml
@@ -9,11 +9,15 @@ edition = "2021"
 flux-macros = { path = "../flux-macros", optional = true }
 flux-nbt = { path = "../flux-nbt" }
 serde = "1.0.147"
+serde_json = "1.0.89"
 convert_case = "0.6.0"
 lobsterchat = "0.4.2"
 rayon = "1.6.0"
 thiserror = "1.0.37"
 uuid = { version = "1.2.2", features = ["v4", "serde"] }
+bitflags = "1.3.2"
+rand = "0.8.5"
+base64 = "0.13.1"
 
 [features]
 default = ["macros"]
